fixtures/python/test-double/should_fail/unittest_mock_import.py
import unittest.mock

patcher = unittest.mock.patch("os.path.exists")
